# shorty

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker_deploy.sh  package.json  run_local_redis.sh  serverless.yml
shorty/: Cargo.toml
shorty-aws-lambda/: Cargo.toml  build.rs
shorty-aws-lambda/src/: main.rs
shorty-conf/: Cargo.toml
shorty-conf/src/: lib.rs
shorty-http/: Cargo.toml
shorty-http/src/: lib.rs  main.rs
shorty-with-lv/: .editorconfig  README.md  package.json
shorty-with-lv/.docker/: Dockerfile  build.sh  login.sh  run.sh
shorty-with-lv/app/: index.html  router.js
shorty-with-lv/app/components/: shortener.js
shorty-with-lv/app/services/: with-lv.js
shorty-with-lv/app/styles/: app.css
shorty-with-lv/app/templates/: application.hbs
shorty-with-lv/app/templates/components/: shortener.hbs
shorty-with-lv/config/: environment.js
shorty-with-lv/tests/: index.html
shorty-with-lv/tests/integration/components/: shortener-test.js
shorty/src/: lib.rs  redis_facade.rs
